--- a/JSexerxises/task-5/5l to r.html
+++ b/JSexerxises/task-5/5l to r.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-  <title>calculator</title>
   <head></head>
   <body>
     <p>
@@ -81,10 +80,10 @@
       ">.</button>
 
       <button onclick="
-        /* -Note: eval() takes a string and runs it as code.
-        - Avoid using eval() in real world projects since
-        - it can potentially be given harmful code to run.
-        - Only use eval() for learning purposes.*/
+        // Note: eval() takes a string and runs it as code.
+        // Avoid using eval() in real world projects since
+        // it can potentially be given harmful code to run.
+        // Only use eval() for learning purposes.
         calculation = eval(calculation);
         console.log(calculation);
       ">=</button>
