--- a/JSexerxises/task-11/11-arrays-and-loops.html
+++ b/JSexerxises/task-11/11-arrays-and-loops.html
@@ -57,7 +57,8 @@
   }
     */
 //Accumulator pattern
-    const nums =[1,1,3];
+   
+/*const nums =[1,1,3];
     let total = 0;
 
     for(let i = 0; i< nums.length;i++){
@@ -73,13 +74,60 @@
       numsDoubled.push(num * 2);
     }
     console.log(numsDoubled);
+    */
+   /*
+   const array1 = [1,2,3];
+   const array2=array1;
+   array2.push(4);
+   console.log(array1);
+   console.log(array2);
+   const [firstvalue, secondvalue] = [1,2,3];
+    */
+   /*
+   for(i=0;i<=5;i++){
+    console.log(i);
+    if(i === 3){
+      continue;
+    }
+    console.log(i);
+    if (i === 8){
+      break;
+    }
+   }*/
+  /*for(i=0;i <= 5;i++){
+    if(i % 3 === 0){
+      continue;
+    }
+    console.log(i);
+    if (i === 8){
+      break;
+    }
+   }
+    */
+   let i = 1;
+   while(i<=10) {
+    if (i % 3 == 0){
+      i++;
+      continue;
+    }
+    console.log(i);
+    i++
+   }
+   //loops using Function
+   function doubleArray(nums){
+    
+    const numsDoubled = [];
+
+    for(let i=0;i< nums.length;i++){
+        const num = nums[i];
+        if(num === 0){
+          return numsDoubled;
+        }
+        numsDoubled.push(num * 2);
+      }
+     return numsDoubled;
+    }
+    console.log(doubleArray([1,1,3,5,0,5]));
   </script>
   </body>
 </html>
-
-
-
-
-
-
-
