done with lesson-12

--- a/task-12/12-rock-paper-scissors.html
+++ b/task-12/12-rock-paper-scissors.html
@@ -7,9 +7,9 @@
 <body>
   <p class="title">Rock Paper Scissors</p>
 
-  <button onclick="playGame('rock')" class="move-button"><img src="rock-emoji.png" class="move-icon"></button>
-  <button onclick="playGame('paper')" class="move-button"><img src="paper-emoji.png" class="move-icon"></button>
-  <button onclick="playGame('scissors')" class="move-button"><img src="scissors-emoji.png" class="move-icon"></button>
+  <button class="move-button js-rock-button"><img src="rock-emoji.png" class="move-icon"></button>
+  <button onclick="playGame('paper')" class="move-button js-paper-button"><img src="paper-emoji.png" class="move-icon"></button>
+  <button class="move-button js-scissors-button"><img src="scissors-emoji.png" class="move-icon"></button>
   <p class="js-result result ">You Win.</p>
   <p class="js-moves" ></p>
   <p class="js-score score" ></p>
