--- a/task-12/12-Advanced functions.html
+++ b/task-12/12-Advanced functions.html
@@ -5,8 +5,25 @@
   
 </head>
 <body>
-  
+  <button onclick="
+    
+    " class="js-button">click</button>
   <script>
+    const buttonElement = document.querySelector('.js-button');
+
+    const eventListener = () => {
+
+      console.log('click');
+    };
+
+    buttonElement.addEventListener('click', eventListener);
+    buttonElement.removeEventListener('click',eventListener);
+
+     buttonElement.addEventListener('click', () => {
+
+      console.log('click2');
+    });
+    
    /*
    setTimeout(function() {
     console.log('timeout');
@@ -19,17 +36,44 @@
 
    console.log('next line 2');
    */
+  /*
     [
       'make dinner',
       'wash dishes',
       'watch youtube'
-    ].forEach(function(value, index) {
-      if(valu === 'wash dishes') {
+    ].forEach((value, index) => {
+      if(value === 'wash dishes') {
         return;
       }
       console.log(index);
       console.log(value);
     });
+    const regularFunction = function(param1,param2){
+      console.log('hello');
+      return 5;
+    };
+    const arrowFunction = (param1,param2)=> {
+      console.log('hello');
+      return 5;
+    };
+    arrowFunction();
+    const oneparam = param => {
+      console.log(param + 1);
+    };
+    oneparam(2);
+
+    const oneLine = () => 2+3; ;
+    console.log(oneLine());
+
+    const object2 = {
+      method: () => {
+
+      },
+      method() {
+
+      }
+    };
+    */
   </script>
   </body>
 </html>
